[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scripts/Entities/loader_pack.gd" type="Script" id=1]
[ext_resource path="res://Data/Graphics/Abstract/square.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 80, 80 )

[sub_resource type="Animation" id=2]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 256, 256 ), Vector2( 0, 0 ) ]
}

[node name="loader_pack1" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="."]

transform/scale = Vector2( 256, 256 )
texture = ExtResource( 2 )
modulate = Color( 0.235294, 0.27451, 0.784314, 1 )

[node name="Sprite2" type="Sprite" parent="."]

transform/scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
modulate = Color( 0.313726, 0.705882, 0.784314, 1 )

[node name="Shape" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[connection signal="body_enter" from="." to="." method="_on_body_enter"]

[connection signal="finished" from="AnimationPlayer" to="." method="idle"]


