[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scripts/Entities/loader_pack.gd" type="Script" id=1]
[ext_resource path="res://Data/Graphics/Abstract/large_triangle.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 0, -200, -200, 0, 200, 0 )

[sub_resource type="Animation" id=2]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.6, 1.6 ), Vector2( 0, 0 ) ]
}

[node name="loader_pack2" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -50 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]

transform/rot = -135.0
transform/scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 2 )
modulate = Color( 0.313726, 0.701961, 0.784314, 1 )

[node name="Sprite1" type="Sprite" parent="."]

transform/rot = -135.0
transform/scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
modulate = Color( 0.231373, 0.27451, 0.784314, 1 )

[node name="Shape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -50 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[connection signal="body_enter" from="." to="." method="_on_body_enter"]

[connection signal="finished" from="AnimationPlayer" to="." method="idle"]


